# lab5

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: main.cpp  main.hpp
test/: mainTest.cpp
